crates/vb_codegen/tests/compile-fail/forbid_unchecked_indexing.stderr
error[E0608]: cannot index into a value of type `SlotBank<i32, 4>`
 --> tests/compile-fail/forbid_unchecked_indexing.rs
  |
  |     let _val: i32 = bank[idx];
  |                         ^^^^^
